@@ -17,49 +17,37 @@
 package org.graylog2.commands.journal;
 
 import com.google.inject.Module;
+import jakarta.annotation.Nonnull;
 import org.graylog2.Configuration;
-import org.graylog2.audit.AuditBindings;
-import org.graylog2.bindings.ConfigurationModule;
-import org.graylog2.bootstrap.CmdLineTool;
+import org.graylog2.commands.AbstractNodeCommand;
 import org.graylog2.featureflag.FeatureFlags;
 import org.graylog2.plugin.KafkaJournalConfiguration;
 import org.graylog2.plugin.Plugin;
-import org.graylog2.shared.bindings.SchedulerBindings;
-import org.graylog2.shared.bindings.ServerStatusBindings;
 import org.graylog2.shared.journal.LocalKafkaJournal;
 import org.graylog2.shared.journal.LocalKafkaJournalModule;
-import org.graylog2.shared.plugins.ChainingClassLoader;
 
-import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
-public abstract class AbstractJournalCommand extends CmdLineTool {
-    protected static final Configuration configuration = new Configuration();
+public abstract class AbstractJournalCommand extends AbstractNodeCommand {
     protected final KafkaJournalConfiguration kafkaJournalConfiguration = new KafkaJournalConfiguration();
     protected LocalKafkaJournal journal;
 
-    public AbstractJournalCommand() {
-        this(null);
-    }
     public AbstractJournalCommand(String commandName) {
-        super(commandName, configuration);
+        super(commandName, new JournalCommandConfiguration());
     }
 
     @Override
-    protected List<Module> getCommandBindings(FeatureFlags featureFlags) {
-        return Arrays.asList(new ConfigurationModule(configuration),
-                new ServerStatusBindings(capabilities()),
-                new SchedulerBindings(),
-                new LocalKafkaJournalModule(),
-                new AuditBindings());
+    protected @Nonnull List<Module> getNodeCommandBindings(FeatureFlags featureFlags) {
+        return List.of(
+                new LocalKafkaJournalModule()
+        );
     }
 
     @Override
-    protected List<Object> getCommandConfigurationBeans() {
-        return Arrays.asList(configuration, kafkaJournalConfiguration);
+    protected @Nonnull List<Object> getNodeCommandConfigurationBeans() {
+        return List.of(kafkaJournalConfiguration);
     }
 
     @Override
@@ -69,7 +57,7 @@ public abstract class AbstractJournalCommand extends CmdLineTool {
     }
 
     @Override
-    protected Set<Plugin> loadPlugins(Path pluginPath, ChainingClassLoader chainingClassLoader) {
+    protected Set<Plugin> loadPlugins() {
         // these commands do not need plugins, which could cause problems because of not loaded config beans
         return Collections.emptySet();
     }
@@ -90,4 +78,31 @@ public abstract class AbstractJournalCommand extends CmdLineTool {
     }
 
     protected abstract void runCommand();
+
+    static class JournalCommandConfiguration extends Configuration {
+        @Override
+        public boolean withNodeIdFile() {
+            return false;
+        }
+
+        @Override
+        public boolean withScheduler() {
+            return true;
+        }
+
+        @Override
+        public boolean withEventBus() {
+            return false;
+        }
+
+        @Override
+        public boolean withPlugins() {
+            return false;
+        }
+
+        @Override
+        public boolean withMongoDb() {
+            return false;
+        }
+    }
 }
